src/objects/IPM_ProjectMetadata__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>BET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_ApplicableCompanyCard__c</fullName>
        <label>Applicable Company Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_ApplicableGateKeepingModels__c</fullName>
        <label>Applicable GateKeeping Models</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Applicable_Phases__c</fullName>
        <label>Applicable Phases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Charter_Question_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Question Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Charter_Question_HelpText__c</fullName>
        <label>Charter Question HelpText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_DefaultComplexity__c</fullName>
        <label>Default Complexity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_DefaultPhase__c</fullName>
        <label>Default Phase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Default_GateKeeping_Model__c</fullName>
        <label>Default GateKeeping Model</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_FastTrackApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_GateKeepingHelpText__c</fullName>
        <label>GateKeeping HelpText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_GatekeepingModelsApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gatekeeping Models Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_MadatoryFields__c</fullName>
        <label>Madatory Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_MultipleBrandPosApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple BrandPos Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_ProjectSubType__c</fullName>
        <label>Project SubType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Span__c</fullName>
        <label>Project Span</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Type__c</fullName>
        <label>Project Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_SubProjectHelpText__c</fullName>
        <label>Sub Project Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_TargetLaunchDateDuration__c</fullName>
        <label>Target Launch Date Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_WhiteSpaceApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White Space Applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>IPM Project MetaData</label>
</CustomObject>